dropzone preview img aligning correctly

--- a/client/src/components/Characters/CharacterCard/character_card.css
+++ b/client/src/components/Characters/CharacterCard/character_card.css
@@ -49,6 +49,7 @@
   background-color: var(--background-color);
   display: flex;
   flex-flow: column;
+  overflow: hidden;
 }
 
 .character_card_body {
